buildscript {
    ext {
        androidx_activity_version = "1.7.2"
        androidx_app_compat_version = "1.6.1"
        androidx_constraint_layout_version = "2.1.4"
        androidx_core_version = "1.10.1"
        androidx_encrypted_shared_preferences_version = "1.0.0"
        androidx_fragment_version = "1.6.1"
        arch_version = "2.2.0"
        bouncy_castle_version = "1.70"
        coil_version = "2.4.0"
        coroutines_play_services_version = "1.7.1"
        glide_version = "4.13.2"
        google_material_components_version = "1.9.0"
        hilt_version = "2.48"
        junit_version = "4.13.2"
        kotlin_coroutines_version = "1.7.3"
        kotlin_version = "1.8.21"
        lifecycle_version = "2.6.1"
        lifecycle_saved_state_version = "2.6.2"
        logging_interceptor_version = "4.10.0"
        room_version = "2.5.1"
        shimmer_version = "0.5.0"
        retrofit_version = "2.9.0"
        test_runner_version = "1.1.0"
        test_rules_version = "1.1.0"
        test_expresso_core_version = "3.1.0"
        test_expresso_contrib_version = "3.3.0"
        test_ext_junit_version = "1.1.5"
        timber_version = "5.0.1"
    }
}
plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id "dagger.hilt.android.plugin"
    id "kotlin-android"
    id "kotlin-parcelize"
    id "kotlin-kapt"
}

android {
    namespace 'mx.mariovaldez.yapecodechallenge'
    compileSdk 33

    defaultConfig {
        applicationId "mx.mariovaldez.yapecodechallenge"
        minSdk 24
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true

    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField "String", "BASE_URL", "\"https://demo5158593.mockable.io/\""
            signingConfig signingConfigs.debug
        }
        debug {
            debuggable true
            minifyEnabled false
            buildConfigField "String", "BASE_URL", "\"https://demo5158593.mockable.io/\""
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = JavaVersion.VERSION_17.toString()
    }

    buildFeatures {
        buildConfig = true
        viewBinding true
    }

    android.applicationVariants.configureEach {
        variant ->
            variant.outputs.configureEach {
                def flavor = it.name
                def versionName = variant.versionName
                def versionCode = it.versionCode
                outputFileName = "${applicationId}_yape_code_challenge_${flavor}_${versionName}_V${versionCode}.apk"
            }
    }

    testOptions {

        animationsDisabled = true

        unitTests.all {
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }
}

dependencies {
    // Kotlin
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"

    // AndroidX Core
    implementation "androidx.core:core-ktx:$androidx_core_version"
    implementation "androidx.activity:activity-ktx:$androidx_activity_version"
    implementation "androidx.fragment:fragment-ktx:$androidx_fragment_version"

    // AndroidX Appcompat
    implementation "androidx.appcompat:appcompat:$androidx_app_compat_version"

    // Encrypted Shared Preferences
    implementation "androidx.security:security-crypto:$androidx_encrypted_shared_preferences_version"

    // Hilt
    //noinspection GradleDependency
    implementation "com.google.dagger:hilt-android:$hilt_version"
    //implementation "com.google.dagger:hilt-android-compiler:$hilt_version"

    // Lifecycle
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_saved_state_version"
    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"

    // Retrofit & Gson
    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
    implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"

    // Constraint Layout
    implementation "androidx.constraintlayout:constraintlayout:$androidx_constraint_layout_version"

    // Material Components
    implementation "com.google.android.material:material:$google_material_components_version"

    //Timber
    implementation "com.jakewharton.timber:timber:$timber_version"

    //Coil
    implementation "io.coil-kt:coil:$coil_version"


    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    // Coroutines
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_play_services_version"

    //Shimmer
    implementation "com.facebook.shimmer:shimmer:$shimmer_version"

    implementation 'androidx.test.ext:junit-ktx:1.1.5'

    // region Dependencies - Annotation Processor
    // Hilt
    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"

    // endregion

    testImplementation "junit:junit:$junit_version"
    androidTestImplementation "androidx.test.ext:junit:$test_ext_junit_version"

    androidTestImplementation "androidx.test.espresso:espresso-core:$test_expresso_core_version"
    androidTestImplementation "androidx.test:runner:$test_runner_version"
    androidTestImplementation "androidx.test:rules:$test_rules_version"
    androidTestImplementation "androidx.test.espresso:espresso-contrib:$test_expresso_contrib_version"
    //end region

    //implementation 'androidx.core:core-ktx:1.9.0'
    // implementation 'androidx.appcompat:appcompat:1.6.1'
    //implementation 'com.google.android.material:material:1.9.0'
    //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    //testImplementation 'junit:junit:4.13.2'
    //androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
}

if (project.hasProperty('kapt')) {
    kapt {
        correctErrorTypes = true
        javacOptions {
            option("-source", "9")
            option("-target", "9")
            option("-release", "9")
        }
    }
}